// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NumberButton renders correctly 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "borderColor": "white",
      "borderWidth": 1,
      "flex": 0,
      "flexDirection": "column",
      "height": 70,
      "justifyContent": "center",
      "width": 70,
    }
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "fontSize": 24,
        "fontWeight": "bold",
      }
    }
  >
    1
  </Text>
</View>
`;

exports[`NumberButton renders correctly when number and nextNumbers are the same 1`] = `
<View
  accessibilityComponentType={undefined}
  accessibilityLabel={undefined}
  accessibilityTraits={undefined}
  accessible={true}
  collapsable={undefined}
  hasTVPreferredFocus={undefined}
  hitSlop={undefined}
  isTVSelectable={true}
  nativeID={undefined}
  onLayout={undefined}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "borderColor": "white",
      "borderWidth": 1,
      "flex": 0,
      "flexDirection": "column",
      "height": 70,
      "justifyContent": "center",
      "opacity": 1,
      "width": 70,
    }
  }
  testID={undefined}
  tvParallaxProperties={undefined}
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "fontSize": 24,
        "fontWeight": "bold",
      }
    }
  >
    2
  </Text>
</View>
`;
